<resources>
    <string name="app_name">ScooterShare</string>
    <string name="inputName">Enter Scooter Name</string>
    <string name="inputLocation">Enter Location</string>
    <string name="invalid_information">Add information to text fields!</string>
    <string name="correct_information">You have chosen a Scooter!</string>
    <string name="app_title_name">Scooter sharing</string>
    <string name="start_ride_button">Start ride</string>
    <string name="update_ride_button">Update ride</string>
    <string name="name">%s</string>
    <string name="location">%s</string>
    <string name="time">%s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_main">Scooter share</string>
    <string name="API">Check API version </string>
    <string name="delete_ride_button">Delete ride</string>
    <string name="List_rides_button">List rides</string>
    <string name="logout">Logout</string>
    <string name="card_scooter_time">Time</string>
    <string name="card_scooter_location">Location</string>
    <string name="card_scooter_name">name</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="latitude_text">Latitude text</string>
    <string name="longitude_text">Longitude text</string>
    <string name="time_text">Time text</string>
    <string name="content_description_location">content description</string>
    <string name="address_text">address text</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="capture_button_alt">Capture button</string>
    <string name="gallery_button_alt">gallery button</string>
    <string name="scan">Scan your Scooter QR code to start</string>
    <string name="unavailable">sensor not available</string>
    <string name="address_text_">Address text</string>
    <string name="LogoutMenu">Logout</string>
    <string name="username">username</string>
    <string name="title">Hello This is a test</string>
    <string name="subtitle">"Yes this looks nice "</string>
    <string name="body">woitk0wporiteorteoisrtgpoeritujgs9epiujogjsdprijpoisrjgpoesirgjspeorjigosepjigserg</string>
    <string name="confirm">helll yeahhh</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="home">Home</string>
    <string name="welcome_scooter"><![CDATA[Welcome to scootersharing app by Nicolai & Oscar]]></string>
    <string name="show_receipts">Show receipts</string>
    <string name="camera">Camera</string>
    <string name="user">User</string>
    <string name="profilepicture">profilepicture</string>
    <string name="image">image</string>
    <string name="stuff">stuff</string>


</resources>