<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/scooter_name_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/scooter_location_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"/>

    <TextView
        android:id="@+id/scooter_time_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"/>



</LinearLayout>