<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    tools:context=".view.MainActivity">




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        app:cardCornerRadius="15dp"
        android:id="@+id/cardView">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <ImageView
                android:id="@+id/scooterPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/card_scooter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/card_scooter_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:lines="2"
                />

            <TextView
                android:id="@+id/card_scooter_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"

                android:textSize="15sp"
                android:lines="2"
                android:text="@string/card_scooter_location" />

            <TextView
                android:id="@+id/card_scooter_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"

                android:textSize="15sp"
                android:lines="2"
                android:text="@string/card_scooter_time" />



        </LinearLayout>



    </androidx.cardview.widget.CardView>




</LinearLayout>