<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.opencv.android.JavaCameraView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        opencv:camera_id="any" />

    <ImageButton
        android:id="@+id/camera_switch_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="92dp"
        android:layout_marginStart="32dp"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:background="@android:color/transparent"
        android:contentDescription="@string/switch_camera_button_alt"
        app:srcCompat="@drawable/ic_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        android:id="@+id/camera_capture_button"
        android:layout_width="92dp"
        android:layout_height="92dp"
        android:layout_marginBottom="80dp"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_shutter"
        android:contentDescription="@string/capture_button_alt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:id="@+id/image_analysis_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="92dp"
        android:layout_marginEnd="32dp"
        android:padding="16dp"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_outer_circle"
        android:contentDescription="@string/gallery_button_alt"
        app:srcCompat="@drawable/ic_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>