<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.GeolocationFragment" >



        <TextView
            android:id="@+id/latitude_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginStart="24dp"
            android:text="@string/latitude_text"
            android:textSize="20sp"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/latitude_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/latitude_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"

                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/longitude_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:textSize="20sp"

            android:text="@string/longitude_text"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            app:layout_constraintTop_toBottomOf="@+id/latitude_text_field"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/longitude_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:textSize="20sp"

            app:layout_constraintTop_toBottomOf="@+id/longitude_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="20sp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="24dp"
            android:textSize="20sp"

            android:text="@string/time_text"
            android:textAppearance="?attr/textAppearanceHeadlineSmall"
            app:layout_constraintTop_toBottomOf="@+id/longitude_text_field"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_text_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/time_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="20sp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

        </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:textSize="20sp"

        android:text="@string/address_text_"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        app:layout_constraintTop_toBottomOf="@+id/time_text_field"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_text_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/address_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:textSize="20sp"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceTitleLarge" />

    </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>